--- a/src/index/containers/cabinet/DexSwap/components/DexSwapInput/DexSwapInput.less
+++ b/src/index/containers/cabinet/DexSwap/components/DexSwapInput/DexSwapInput.less
@@ -8,7 +8,7 @@
     justify-content: start;
     width: 100%;
     padding: 14.5px 15px 16.5px;
-    border: 1px solid #dfe3f0;
+    border: 1px solid var(--light-gray);
     border-radius: 20px;
     box-sizing: border-box;
   }
@@ -22,6 +22,7 @@
   &__label {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-bottom: 9px;
     padding: 0 15px 0 7px;
     color: var(--black-gunmetal);
