--- a/src/index/containers/cabinet/DexSwap/components/TokenSelect/TokenSelect.less
+++ b/src/index/containers/cabinet/DexSwap/components/TokenSelect/TokenSelect.less
@@ -50,7 +50,7 @@
         }
     }
     &__search {
-        border: 1px solid #DFE3F0;
+        border: 1px solid var(--light-gray);
         border-radius: var(--radius-panel);
         height: 46px;
         display: flex;
@@ -65,6 +65,7 @@
             border: none;
             outline: none;
             flex-grow: 1;
+            background: transparent;
         }
         span.isvg {
             margin-left: 6px;
